last edit on result text

--- a/Genotoxicity_Classifier.ipynb
+++ b/Genotoxicity_Classifier.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "D3rFTNAIhSwS"
       },
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "cSgppzqPiR0G"
       },
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "tSX_dXx7FOMY"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "qbF35xUkFhmf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,12 +162,12 @@
       "metadata": {
         "id": "N-VHNDe4QRLn"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "7AMm19NW0bJR"
       },
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "zcW-JgyfSGKl"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
         "id": "-Gq2vNdTIIW0",
         "outputId": "a3be69de-94a9-434e-96b0-4319873a1751"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "CgBjIdT-rnRU"
       },
@@ -544,7 +544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "bCXEY7a9ugO_"
       },
@@ -578,12 +578,12 @@
       "metadata": {
         "id": "f50607xIQ2sa"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "ThFIFw8IukMY"
       },
@@ -600,7 +600,7 @@
       "metadata": {
         "id": "NFKyWb-fQgT8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -632,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "0Egq_rNsxtIj"
       },
@@ -652,7 +652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -697,7 +697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "LPdV1vDnWBsh"
       },
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -842,7 +842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1000,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1043,7 +1043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1201,7 +1201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1244,7 +1244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1402,7 +1402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1436,7 +1436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1625,7 +1625,7 @@
         "! wget https://github.com/dataprofessor/bioinformatics/raw/master/padel.zip\n",
         "! wget https://github.com/dataprofessor/bioinformatics/raw/master/padel.sh"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1679,7 +1679,7 @@
       "source": [
         "! unzip padel.zip"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1883,7 +1883,7 @@
         "df = df.rename({'Name': 'class'}, axis='columns')\n",
         "df.to_csv('QSAR_DescriptorData_train.csv', index=False)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6321,7 +6321,7 @@
         },
         "outputId": "7a803344-746c-450c-ba2d-85d624aa0689"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7352,7 +7352,7 @@
       "metadata": {
         "id": "VjtMi-BJR9Jp"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7377,7 +7377,7 @@
         },
         "outputId": "bf42bb43-ec22-496b-8d7b-812dd400402c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7679,7 +7679,7 @@
         },
         "outputId": "1cfc4a7c-5ed4-462c-c24c-1b16ae4d8b76"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7693,7 +7693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "li32nAPohSwc",
         "scrolled": true
@@ -7706,7 +7706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "OWylAtAVhSwh"
       },
@@ -7729,7 +7729,7 @@
         },
         "outputId": "62ffcea8-6458-49a0-f109-51d31cf90d21"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7974,7 +7974,7 @@
         },
         "outputId": "7b6f6b8e-dc2e-461f-a85c-e6e7fe08c983"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8032,12 +8032,12 @@
       "metadata": {
         "id": "yMV6JWwINQY5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "YHM3DCD5wuNe",
         "colab": {
@@ -8079,7 +8079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "fOI66ropqRfY",
         "colab": {
@@ -8115,12 +8115,12 @@
       "metadata": {
         "id": "9nXGwxc1bbF7"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "qfoI_QOESW0U"
       },
@@ -8155,7 +8155,7 @@
       "metadata": {
         "id": "eMCYPmpoXqbU"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8184,12 +8184,12 @@
       "metadata": {
         "id": "l1C8IN1SuwZ_"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "7nvOASayb6vr",
         "colab": {
@@ -8400,7 +8400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "wtLNbe2oVT8-",
         "colab": {
@@ -8443,7 +8443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "tp0gYbEFVT8-",
         "colab": {
@@ -8486,12 +8486,12 @@
       "metadata": {
         "id": "RSl_TnY9fX9I"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "xJxmD7akVT8_"
       },
@@ -8526,7 +8526,7 @@
       "metadata": {
         "id": "644Hwz2LVjzC"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8592,7 +8592,7 @@
         "id": "Ws7pCIrjkPvU",
         "outputId": "5ba9397f-d9f9-4caa-a0ac-a84bd5845d30"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8641,7 +8641,7 @@
         "id": "9evOZ9YykL7G",
         "outputId": "62c632b0-8a1c-4735-d9c8-29ac2c914714"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8690,7 +8690,7 @@
         },
         "outputId": "f9186858-84a5-4bb7-a54d-9563c885d4af"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8704,7 +8704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "yDZK1gopVT9A",
         "colab": {
@@ -8766,9 +8766,9 @@
       "source": [
         "The two datasets from C. S. M. Chu et al. were used as the data basis, comprising a total of 5395 molecules in SMILES form and their genotoxic properties split into two sets, a training set of 4402 molecules and a test set of 993 molecules. From these molecules, 881 substructure fingerprints were calculated to characterize the structure of the compound and to use as features for the next step of screening.\n",
         "\n",
-        "A total of 48 different LightGBM QSAR models were created. All created models achieved a good performance during the five-fold cross-validation with respect to accuracy 0.801 ± 0.024. The best LightGBM model showed an accuracy of 0.827± 0.016. The additionally created reference Random Forest model achieved an accuracy of 0.825 ± 0.026 during the five-fold cross-validation, which is only marginally worse compared to the LightGBM. Also the other two metrics Precision and Recall over the LightGBM models show only minor differences to the Random Forest model.\n",
+        "A total of 48 different LightGBM QSAR models were created. All created models achieved a good performance during the five-fold cross-validation with respect to accuracy 0.803 ± 0.025. The best LightGBM model showed an accuracy of 0.829± 0.020. The additionally created reference Random Forest model achieved an accuracy of 0.826 ± 0.015 during the five-fold cross-validation, which is only marginally worse compared to the LightGBM. Also the other two metrics Precision and Recall over the LightGBM models show only minor differences to the Random Forest model.\n",
         "\n",
-        "In the external validation with the test data set, both best LightGBM models showed a performance of accuracy 0.774, precision 0.798 and recall 0.737. The reference RF model showed a performance of accuracy 0.779, precision 0.808 and recall 0.735, which is only in accuracy and precision marginally better compared to the LightGBM. But there is a clear difference in the time needed to train a model, the Random Forest needed about 10 seconds whereas the LightGBM models needed only about 1 second.\n",
+        "In the external validation with the test data set, the best LightGBM model showed a performance of accuracy 0.774, precision 0.798 and recall 0.737. The reference RF model showed a performance of accuracy 0.778, precision 0.810 and recall 0.729, which is only in accuracy and precision marginally better compared to the LightGBM. But there is a clear difference in the time needed to train a model, the Random Forest needed about 10 seconds whereas the LightGBM models needed only about 1 second.\n",
         "\n"
       ],
       "metadata": {
@@ -8786,7 +8786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "7nTvT8HiUAAh",
         "colab": {
@@ -8838,7 +8838,7 @@
         },
         "outputId": "f031bd13-6caa-4f70-894c-3d1bb0cdd46a"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8873,7 +8873,7 @@
         },
         "outputId": "cbe3787f-a4e6-43d2-b2ae-47a6f754b9cd"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8908,7 +8908,7 @@
         },
         "outputId": "3d43171f-6dea-4af9-e24f-f1937a897bc5"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8950,7 +8950,7 @@
         },
         "outputId": "810e1521-4185-404f-cc32-0c205d799abe"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8992,7 +8992,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "N0Wj7ji0VT8_",
         "colab": {
@@ -9042,7 +9042,7 @@
         },
         "outputId": "e00172ec-9c85-4dee-bf57-a43e6334297d"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9074,7 +9074,7 @@
         },
         "outputId": "deb5b8bf-cf78-430b-fc92-013c7c7b4c95"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9105,7 +9105,7 @@
       "metadata": {
         "id": "xrKGYqKo2Q8Q"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9121,7 +9121,7 @@
         },
         "outputId": "c22b7789-4612-4e8d-9628-6c25a589b2a0"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9327,7 +9327,7 @@
         },
         "outputId": "b40d434d-f649-4793-8ff7-4b0febc5b97b"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9363,7 +9363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "id": "GW1ZSsfJWqbM",
         "colab": {
