--- a/Genotoxicity_all_DeploymentModel.ipynb
+++ b/Genotoxicity_all_DeploymentModel.ipynb
@@ -5682,12 +5682,12 @@
       "source": [
         "import pickle\n",
         "import pandas as pd\n",
-        "from lightgbm import LGBMClassifier"
+        "from sklearn.ensemble import RandomForestClassifier"
       ],
       "metadata": {
         "id": "OdFb70DVCZNW"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -5698,69 +5698,67 @@
       "metadata": {
         "id": "Vjf2fqEtM65p"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "X = df.drop(['class'], axis=1)\n",
+        "X.to_csv('descriptor_list.csv', index = False)\n",
         "y = df[\"class\"]"
       ],
       "metadata": {
         "id": "f2AtPjoODvCC"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "clfmodel = {'boosting_type': 'gbdt', 'learning_rate': 0.126, 'max_depth': 21, 'n_estimators': 96, 'num_leaves': 32, 'subsample_for_bin': 60000}\n",
+        "clfmodel = {'max_depth': 40,\n",
+        "            'min_samples_leaf': 1,\n",
+        "            'min_samples_split': 5,\n",
+        "            'n_estimators': 800}\n",
         "\n",
-        "model =  LGBMClassifier(boosting_type=clfmodel[\"boosting_type\"],\n",
-        "                        learning_rate=clfmodel['learning_rate'],\n",
-        "                        n_estimators=clfmodel['n_estimators'],\n",
-        "                        num_leaves=clfmodel['num_leaves'],\n",
-        "                        subsample_for_bin=clfmodel[\"subsample_for_bin\"],\n",
-        "                        max_depth=clfmodel[\"max_depth\"],\n",
-        "                        random_state=42)\n",
+        "model =  RandomForestClassifier(max_depth=clfmodel[\"max_depth\"],\n",
+        "                                min_samples_leaf=clfmodel[\"min_samples_leaf\"],\n",
+        "                                min_samples_split=clfmodel[\"min_samples_split\"],\n",
+        "                                n_estimators=clfmodel[\"n_estimators\"])\n",
         "\n",
         "model.fit(X,y)\n",
         "\n",
-        "pickle.dump(model, open('amesTest_model.pkl', 'wb'))"
-      ],
-      "metadata": {
-        "id": "VOYMFNNlDON4"
-      },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model_reloaded = pickle.load(open(\"amesTest_model.pkl\", 'rb'))\n",
+        "# save\n",
+        "with open('amesTest_model.pkl','wb') as f:\n",
+        "    pickle.dump(model,f)\n",
+        "\n",
+        "# load\n",
+        "with open('amesTest_model.pkl', 'rb') as f:\n",
+        "    model_reloaded = pickle.load(f)\n",
+        "\n",
+        "\n",
         "model_reloaded.predict(X)"
       ],
       "metadata": {
-        "id": "PxoaldJjFQDQ",
-        "outputId": "a0457a52-1523-48cb-b148-b68cbf99c9ca",
+        "id": "VOYMFNNlDON4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d4b91314-3688-4cb8-82af-9072bd0e754f"
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array(['Non-toxic', 'Non-toxic', 'Non-toxic', ..., 'Non-toxic',\n",
-              "       'Non-toxic', 'Non-toxic'], dtype=object)"
+              "array(['Toxic', 'Non-toxic', 'Non-toxic', ..., 'Non-toxic', 'Non-toxic',\n",
+              "       'Non-toxic'], dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 14
         }
       ]
     },
@@ -5770,7 +5768,7 @@
         ""
       ],
       "metadata": {
-        "id": "iXmMy0E9RQ11"
+        "id": "KyhxLizzyRR3"
       },
       "execution_count": null,
       "outputs": []
